<resources>
    <string name="app_name">Hadramout</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_inn">Sign In or Create Account to quickly mange orders</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpas">Forget Password?</string>
    <string name="login">SIGN IN</string>
    <string name="or">Or</string>
    <string name="loginface">LOGIN WITH FCAEBOOK</string>
    <string name="noacc">Don\'t Have Account?</string>
    <string name="signupnow">CREATE AN ACCOUNT</string>
    <string name="fullname">Full Name</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="branch">Branches</string>
    <string name="home">Home</string>
    <string name="menu">Categories</string>
    <string name="favourit">Favourits</string>
    <string name="more">More</string>
    <string name="offers">Offers</string>
    <string name="noaddress">No Address found</string>
    <string name="addres">Address</string>
    <string name="edit">Edit</string>
    <string name="myorders">My Orders</string>
    <string name="myprofile">My Profile</string>
    <string name="recentorders">Orders</string>
    <string name="myaddress">My Addresses</string>
    <string name="aboutchick">About Chic Chicken</string>
    <string name="follot">Follow Us</string>
    <string name="contactus">Contact Us</string>
    <string name="logout">SIGNOUT</string>
    <string name="about">About Us</string>
    <string name="addtocart">Add To Cart</string>
    <string name="include">Include</string>
    <string name="subtotal">Total: </string>
    <string name="tax">Taxes: </string>
    <string name="ship">Shipping: </string>
    <string name="checkout">Checkout</string>
    <string name="selectlanguage">Select Language</string>
    <string name="selectbranch">Select Branch</string>
    <string name="register">CREATE ACCOUNT</string>
    <string name="validemail">Email or phone is already used</string>
    <string name="feildempty">Fill input with valid data</string>
    <string name="pasweak">The password should contain at least one digit &amp; at least one special char
     /n at least one upper case &amp;  at least 8 characters</string>
    <string name="selectarea">Select District</string>
    <string name="validcity">Please Select City</string>
    <string name="validarea">Please Select Area</string>
    <string name="wrongemailorpass">Wrong Email or Password</string>
    <string name="nointernet">No Internet Connection</string>
    <string name="message">Message</string>
    <string name="changedata">Change Data</string>
    <string name="changepass">Change Password</string>
    <string name="change">Change </string>
    <string name="confirmpass">Confirm password</string>
    <string name="updated">Information has been updated Successfully</string>
    <string name="updatedpassword">Password has been updated Successfully</string>
    <string name="updatedemail">Email has been sent Successfully</string>
    <string name="failedmsg">Failed, There is something wrong</string>
    <string name="sendmsg">Send Message</string>
    <string name="sendsuccess">Message has been Send</string>
    <string name="newpassword">New Password</string>
    <string name="oldpasswrong">Please Make Sure from your old password</string>
    <string name="size">Sizes</string>
    <string name="language">Language</string>
    <string name="extra">Extra</string>
    <string name="region">Region</string>
    <string name="streetname">Street Name</string>
    <string name="b_number">Building Number</string>
    <string name="f_number">Floor Number</string>
    <string name="apartment_num">Apartment Number</string>
    <string name="ordernow">Order Now</string>
    <string name="ordersuccess"> Your Order added successfully</string>
    <string name="debit">Credit / Debit Card</string>
    <string name="perviousorder">PREVIOUS ORDERS</string>
    <string name="cash">Cash On Delivery</string>
    <string name="noorders">Not Found Any order</string>
    <string name="orderid">Order id</string>
    <string name="InProgress">In Progress</string>
    <string name="Delivered">Delivered</string>
    <string name="Canceled">Canceled</string>
    <string name="payment_method">Payment method</string>
    <string name="Deliveryaddress">Delivery address</string>
    <string name="Items">Items</string>
    <string name="sub_total">Sub Total </string>
    <string name="Tax">Tax </string>
    <string name="Delivery_fees">Delivery fees </string>
    <string name="english">English</string>
    <string name="herbian">Hebrew</string>
    <string name="arabic">عربي</string>
    <string name="Deliver">Deliver</string>
    <string name="date">Date</string>
    <string name="price">Price :</string>
    <string name="noproduct">No Products found</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="gram">/G</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="cart">Your Cart</string>
    <string name="descrption">Description</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total Cost</string>
    <string name="t_price">Total Price :</string>
    <string name="nofavproduct">No Product Found </string>
    <string name="nocartproduct">No Product Found in your Cart</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wantlogout">Do you want to logout?</string>
    <string name="benfits">Benfits</string>
    <string name="inger">Ingredients</string>
    <string name="nutr">Nutrition</string>
    <string name="product">Products</string>
    <string name="saudi">Saudi</string>
    <string name="emara">Emarat</string>
    <string name="kewait">Kewait</string>
    <string name="egypt">Egypt</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="deal">DEALS OF THE DAY</string>
    <string name="feature">Feature Product</string>
    <string name="new_arriv">NEW ARRIVALS</string>
    <string name="bes_selling">BESTSELLING</string>
    <string name="our_blog">Today\'s dish</string>
    <string name="profile">Profile Information</string>
    <string name="reviews">Reviwes</string>
    <string name="n_cart">Number of Product</string>
    <string name="T_cart">Total Cart</string>
    <string name="s_service">Shipping Service</string>
    <string name="t_bill">Total Bill</string>
    <string name="country">Country</string>
    <string name="selectcountry">Select Country</string>
    <string name="order_code">Order Code</string>
    <string name="area">Area</string>
    <string name="re_pas">ConFirm Password</string>
    <string name="p_notmatch">Password Not Match</string>
    <string name="day">Day</string>
    <string name="hour">Hrs</string>
    <string name="min">Mins</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="langandcoun">Language</string>
    <string name="sizes">Sizes</string>
    <string name="flashsale">Flash Sale</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="see">See All >></string>
    <string name="cartt">Cart</string>
    <string name="currency">EGY</string>
    <string name="see_all">See All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addtocartsuccess"> Product has been Add To Cart</string>
    <string name="remove_cart">Product has been Removed From Cart</string>
    <string name="remove">Remove From Cart</string>
    <string name="ok">Ok</string>
    <string name="prmocode">Have Promo Code ?</string>
    <string name="enter">Apply</string>
    <string name="loginfirst">Please Login To Access your Profile</string>
    <string name="forget_pas">Forget Password</string>
    <string name="search">Search For Product</string>
    <string name="facebook_app_id">2834578786860966</string>
    <string name="leave_review">Leave Review</string>
    <string name="loginhome">(Login/</string>
    <string name="registerhome">Register)</string>
    <string name="comment">Comment</string>
    <string name="confirm">Confirm</string>
    <string name="exit_message">Do You Want To Exit ?</string>
    <string name="my_acc">My Account</string>
    <string name="promo">Promo Code</string>
    <string name="wishlist">Wishlist</string>
    <string name="reach_out">Reach Out To Us</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="share_promo">Share PromoCode</string>
    <string name="your_promo">Your Promo code is :</string>
    <string name="delivry_type">Delivery Type</string>
    <string name="fast_order">Fast Price</string>
    <string name="slow_order">Slow Price</string>
    <string name="taxes">Taxes</string>
    <string name="delivry_price">Delivery Price</string>
    <string name="off">OFF</string>
    <string name="in_stock">In Stock</string>
    <string name="wight">Wight</string>
    <string name="noreviws">No Reviwes</string>
    <string name="forget_label">Forgot your password?</string>
    <string name="login_label">Sign in</string>
    <string name="register_label">Sign Up</string>
    <string name="register_msg_label">I don\'t have an account?</string>
    <string name="no_products">No Products</string>
    <string name="state">State</string>
    <string name="d_date">Delivery Time</string>
    <string name="empty_gift">Sorry, You Get Empty Gift</string>
    <string name="congratulation">Congratulations</string>
    <string name="chose_gift">Choose Your Gift</string>
    <string name="descount">PromoCode Discount</string>
    <string name="status">Status:</string>
    <string name="gift_promo">You have Gift </string>
    <string name="pending">Pending</string>
    <string name="shipping">In Shippping</string>
    <string name="ondelivry">On Delivery</string>
    <string name="completed">Completed</string>
    <string name="requests">Requests</string>
    <string name="out_stock">Out Of Stock</string>
    <string name="please_enterstate">Please Enter State</string>
    <string name="total_price">Total Price</string>
    <string name="policy">Terms &amp; Conditions</string>
    <string name="checked">Please Make Sure That You Check Privacy</string>
    <string name="sub_cat">Sub Categories</string>
    <string name="similar_product">Similar Product</string>
    <string name="paid">Payment when Recieving Order</string>
    <string name="checkoutorder">ConFirm</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="addReview">Review</string>
    <string name="success_addreview">Review Sent Success</string>
    <string name="onarrival">On Arrival</string>
    <string name="canceled">Canceled</string>
    <string name="your_addres">Your Address</string>
    <string name="wallet">My Wallet</string>
    <string name="no_points">Number Of Points</string>
    <string name="points">Points</string>
    <string name="finish">Finish</string>
    <string name="go_shopping">CONTINUE SHOPPING</string>
    <string name="trackorder">You can track the order delivery in the \n Orders section</string>
</resources>