<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu"-->
<!--            android:title="@string/menu" />-->
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/ic_myprofile"
            android:title="@string/myprofile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_cartmenu"
            android:title="@string/cart" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/myorders" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_favourit"
            android:title="@string/favourit" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_language"
            android:title="@string/langandcoun" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_contactus"
            android:title="@string/contactus" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>



</menu>
