<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:icon="@drawable/btm_home"
        android:title="@string/home"
        android:id="@+id/homeFragment"
        app:itemHorizontalTranslationEnabled="false"
        />
    <item android:icon="@drawable/ic_offers"
        android:title="@string/offers"
        android:id="@+id/offersFragment"
        app:itemHorizontalTranslationEnabled="false"
        />


<!--    <item android:icon="@drawable/btm_deails"-->
<!--        android:title="@string/offers"-->
<!--        android:id="@+id/productsById"-->
<!--        app:itemHorizontalTranslationEnabled="false"-->
<!--        />-->


    <item android:icon="@drawable/ic_notification"
        android:title="@string/cartt"
        android:id="@+id/cartFragment"
        app:itemHorizontalTranslationEnabled="false"
        />

    <!--    <item android:icon="@drawable/language"-->
<!--        android:title="@string/requests"-->
<!--        android:id="@+id/T_Language"-->
<!--        app:itemHorizontalTranslationEnabled="false"-->
<!--        />-->
    <item android:icon="@drawable/btm_account"
        android:title="@string/my_acc"
        android:id="@+id/myAccountFragment"
        app:itemHorizontalTranslationEnabled="false" />


</menu>