<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.successorder.SuccessOrder">



    <ImageView
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/img_successorder"
        android:id="@+id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_100sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderid"
        android:textColor="@color/white"
        android:id="@+id/orderid"
        android:layout_below="@+id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:textSize="@dimen/_20sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trackorder"
        android:textColor="@color/white"
        android:id="@+id/ordertxt"
        android:gravity="center"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_below="@+id/orderid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_13sdp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/go_shopping"
        android:onClick="Btn_finish"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_13sdp"
        app:backgroundTint="@color/red"
        app:cornerRadius="25dp"
        android:layout_below="@+id/ordertxt"/>
</RelativeLayout>