<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@android:color/transparent"
   >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:backgroundTint="@color/black"
        android:layout_marginEnd="@dimen/_15sdp"
        app:cardElevation="0dp"
        app:elevation="0dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_centerHorizontal="true"
                android:id="@+id/imgSuccess"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/congratulation"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:id="@+id/T_Success"
                android:layout_below="@+id/imgSuccess"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/T_Message"
                android:text="@string/addtocartsuccess"
                android:gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_below="@+id/T_Success"
                android:bufferType="spannable"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textIsSelectable="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="50dp"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_alignParentEnd="true"
                android:text="@string/finish"
                android:layout_below="@+id/T_Message"
                android:onClick="Btn_finish"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@color/yellow"
                app:cornerRadius="30dp"
                 />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btncart"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="50dp"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/cartt"
                android:layout_below="@+id/T_Message"
                android:onClick="Btn_Cart"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@color/yellow"
                app:cornerRadius="30dp"
                />

        </RelativeLayout>



    </androidx.cardview.widget.CardView>





</RelativeLayout>